--- a/clients.properties
+++ b/clients.properties
@@ -1,4 +1,7 @@
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.service-name=${spring.application.name}
-name=xiaowang22
+spring.rabbitmq.host=192.168.126.129
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
