--- a/clients.properties
+++ b/clients.properties
@@ -6,3 +6,4 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.cloud.config.fail-fast=true
+name=wangwenming
